--- a/app/src/main/res/layout/fragment_weekly_calendar.xml
+++ b/app/src/main/res/layout/fragment_weekly_calendar.xml
@@ -22,6 +22,5 @@
         app:previous_icon="@drawable/ic_previous"
         app:progress_color="@color/progress_event"
         app:repeat_color="@color/repeat_event"
-        app:sunday_off="true"
-        app:weekend_off="true" />
+        app:sunday_off="true"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
