--- a/plan_calendar/src/main/res/layout/monthly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/monthly_calendar.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:background="?attr/selectableItemBackground"
         android:src="@drawable/ic_previous"
+        android:contentDescription="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +40,7 @@
         android:layout_marginEnd="16dp"
         android:background="?attr/selectableItemBackground"
         android:src="@drawable/ic_next"
+        android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,7 +60,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_date"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
