fix weekly, monthly calendar view

--- a/plan_calendar/src/main/res/layout/monthly_calendar_cell.xml
+++ b/plan_calendar/src/main/res/layout/monthly_calendar_cell.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_month_date"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -43,7 +43,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_event"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:clipToPadding="true"
         android:padding="4dp"
         app:layout_constraintBottom_toTopOf="@+id/view_horizontal"
