--- a/plan_calendar/src/main/res/layout/weekly_hour.xml
+++ b/plan_calendar/src/main/res/layout/weekly_hour.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="55dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
