--- a/plan_calendar/src/main/res/layout/weekly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/weekly_calendar.xml
@@ -48,8 +48,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_date"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="55dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:isScrollContainer="false"
@@ -62,11 +63,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hour"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_date"
