--- a/plan_calendar/src/main/res/layout/event_item.xml
+++ b/plan_calendar/src/main/res/layout/event_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_card"
@@ -7,9 +7,7 @@
     android:layout_height="match_parent"
     android:layout_margin="2dp"
     android:padding="2dp"
-    app:cardCornerRadius="8dp"
-    app:strokeColor="@color/one_time_event"
-    app:strokeWidth="0.5dp">
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -47,12 +45,12 @@
             android:gravity="center"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
+            android:text="@string/app_name"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view"
-            app:layout_constraintTop_toBottomOf="@+id/tv_event_time"
-            tools:text="Plan Calendar" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_event_time" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
