--- a/plan_calendar/src/main/res/layout/weekly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/weekly_calendar.xml
@@ -64,9 +64,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hour"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_date"
