--- a/plan_calendar/src/main/res/layout/weekly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/weekly_calendar.xml
@@ -20,7 +20,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_header_date"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -28,6 +28,7 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
+        tools:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="@+id/btn_next"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
         app:layout_constraintStart_toEndOf="@+id/btn_previous"
@@ -50,7 +51,6 @@
         android:id="@+id/rv_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="55dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:isScrollContainer="false"
