--- a/plan_calendar/src/main/res/layout/event_item.xml
+++ b/plan_calendar/src/main/res/layout/event_item.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_card"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="2dp"
     android:padding="2dp"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:minWidth="100dp">
 
         <View
@@ -25,7 +25,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_event_time"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
@@ -41,7 +41,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_event_name"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
