--- a/plan_calendar/src/main/res/layout/calendar_cell.xml
+++ b/plan_calendar/src/main/res/layout/calendar_cell.xml
@@ -2,7 +2,8 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_month_date"
@@ -13,6 +14,7 @@
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="14sp"
+        tools:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
