--- a/plan_calendar/src/main/res/layout/weekly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/weekly_calendar.xml
@@ -51,7 +51,7 @@
         android:id="@+id/rv_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="55dp"
+        android:minHeight="50dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:isScrollContainer="false"
@@ -62,7 +62,7 @@
         tools:itemCount="2"
         tools:listitem="@layout/calendar_cell" />
 
-   <!-- <androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hour"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -73,6 +73,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_date"
         tools:itemCount="7"
-        tools:listitem="@layout/weekly_hour" />-->
+        tools:listitem="@layout/weekly_hour" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
