--- a/plan_calendar/src/main/res/layout/event_item.xml
+++ b/plan_calendar/src/main/res/layout/event_item.xml
@@ -5,7 +5,6 @@
     android:id="@+id/cv_card"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:minWidth="100dp"
     android:layout_margin="2dp"
     android:padding="2dp"
     app:cardCornerRadius="8dp"
@@ -14,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:minWidth="100dp">
 
         <View
             android:id="@+id/view"
