fix monthly calendar view

--- a/app/src/main/res/layout/fragment_monthly_calendar.xml
+++ b/app/src/main/res/layout/fragment_monthly_calendar.xml
@@ -7,8 +7,9 @@
     <com.nhlynn.plan_calendar.MonthlyCalendar
         android:id="@+id/monthly_cal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
