--- a/plan_calendar/src/main/res/layout/monthly_calendar.xml
+++ b/plan_calendar/src/main/res/layout/monthly_calendar.xml
@@ -1,60 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btn_previous"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:background="?attr/selectableItemBackground"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_previous"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:minHeight="50dp">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_header_date"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_next"
-        app:layout_constraintEnd_toStartOf="@+id/btn_next"
-        app:layout_constraintStart_toEndOf="@+id/btn_previous"
-        app:layout_constraintTop_toTopOf="@+id/btn_previous" />
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_previous"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_previous"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginEnd="16dp"
-        android:background="?attr/selectableItemBackground"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_next"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_header_date"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
+            app:layout_constraintEnd_toStartOf="@+id/btn_next"
+            app:layout_constraintStart_toEndOf="@+id/btn_previous"
+            app:layout_constraintTop_toTopOf="@+id/btn_previous" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/btn_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="16dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_sun"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/sun"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_mon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_mon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/mon"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_tue"
+            app:layout_constraintStart_toEndOf="@+id/lbl_sun"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_tue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/tue"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_wed"
+            app:layout_constraintStart_toEndOf="@+id/lbl_mon"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_wed"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/wed"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_thu"
+            app:layout_constraintStart_toEndOf="@+id/lbl_tue"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_thu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/thu"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_fri"
+            app:layout_constraintStart_toEndOf="@+id/lbl_wed"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_fri"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/fri"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/lbl_sat"
+            app:layout_constraintStart_toEndOf="@+id/lbl_thu"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/lbl_sat"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/sat"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/lbl_fri"
+            app:layout_constraintTop_toBottomOf="@+id/btn_previous" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_date"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
+        android:padding="4dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_next"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_sun"
         tools:itemCount="10"
         tools:listitem="@layout/monthly_calendar_cell" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
