--- a/plan_calendar/src/main/res/values/colors.xml
+++ b/plan_calendar/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="progress_event">#FBDB08</color>
     <color name="past_event">#53534F</color>
     <color name="holiday_event">#DA1D1D</color>
+    <color name="black_disable">#D3D3D3</color>
+    <color name="red_disable">#CC9B8D</color>
 </resources>
